tests/baselines/reference/taggedTemplateStringsWithTagsTypedAsAny.errors.txt
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTagsTypedAsAny.ts(3,3): error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTagsTypedAsAny.ts(5,3): error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTagsTypedAsAny.ts(7,7): error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTagsTypedAsAny.ts(9,7): error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTagsTypedAsAny.ts(11,3): error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTagsTypedAsAny.ts(13,3): error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTagsTypedAsAny.ts(15,3): error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTagsTypedAsAny.ts(17,3): error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTagsTypedAsAny.ts(19,3): error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTagsTypedAsAny.ts(19,32): error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTagsTypedAsAny.ts(21,3): error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTagsTypedAsAny.ts(21,46): error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/templates/taggedTemplateStringsWithTagsTypedAsAny.ts (12 errors) ====
    var f: any;
    
    f `abc`
      ~~~~~
!!! error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
    
    f `abc${1}def${2}ghi`;
      ~~~~~~
!!! error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
    
    f.g.h `abc`
          ~~~~~
!!! error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
    
    f.g.h `abc${1}def${2}ghi`;
          ~~~~~~
!!! error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
    
    f `abc`.member
      ~~~~~
!!! error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
    
    f `abc${1}def${2}ghi`.member;
      ~~~~~~
!!! error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
    
    f `abc`["member"];
      ~~~~~
!!! error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
    
    f `abc${1}def${2}ghi`["member"];
      ~~~~~~
!!! error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
    
    f `abc`["member"].someOtherTag `abc${1}def${2}ghi`;
      ~~~~~
!!! error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
                                   ~~~~~~
!!! error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
    
    f `abc${1}def${2}ghi`["member"].someOtherTag `abc${1}def${2}ghi`;
      ~~~~~~
!!! error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
                                                 ~~~~~~
!!! error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
    
    f.thisIsNotATag(`abc`);
    
    f.thisIsNotATag(`abc${1}def${2}ghi`);